Closed Bug 82073 Opened 24 years ago Closed 24 years ago

clicking on link in three-pane crashes in docshell [@ nsDocShell::SetFocus]

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: waterson, Assigned: bryner)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

I'm crashing when clicking on a link in a message in the mailnews three-pane window. The problem appears to by with bryner's recent fix for bug 31809 (but it might also be the interaction of that change with valeski's recent change to nsDocShell). Anyway, I'll attach a stack trace, but the basic problem is that presShell- >GetRootFrame() is returning a null frame in nsDocShell::GetMainWidget().
Severity: normal → critical
hmmm I have a clean pull from 8pm tonight and I can't reproduce it. I wonder if something was checked in later tonight which made this go away? Or is your tree a recent pull too?
I feel stupid. Of course I ran into this crash right after submitting my comments. Please ignore, I see this. This will be a smoketest blocker tomorrow morning so putting on the radar now.
Severity: critical → blocker
Keywords: smoketest
*** Bug 82128 has been marked as a duplicate of this bug. ***
Possible dupe of bug 53378?
*** Bug 82131 has been marked as a duplicate of this bug. ***
Setting OS=All one of the duplicates is on Linux.
OS: Windows 2000 → All
I didn't need to click on any link with my Mac build. All I did was delete a message and I crashed when the next message was loading. I had read several messages and deleted some prior to the crash. I use IMAP and move-to-trash. I have the same stack as the attachment.
Hardware: PC → All
Attached patch wallpaperSplinter Review
I wallpapered over the crash for now, since bryner is not around. Clearing bug from blocker status, but leaving open for bryner to verify that the fix is right.
Severity: blocker → critical
Keywords: smoketest
*** Bug 82147 has been marked as a duplicate of this bug. ***
Target Milestone: --- → mozilla0.9.1
*** Bug 82155 has been marked as a duplicate of this bug. ***
restoring blocker status. We need this visible until workaround/fix is verified in respin.
Severity: critical → blocker
Blocks: 50881
*** Bug 82291 has been marked as a duplicate of this bug. ***
moving to 0.9.2/normal severity since it doesn't crash with Waterson's wall-papering fix, as tested in today's NS builds on Win98. Bryner, please review fix and verify if it can be permanent.
Severity: blocker → normal
Target Milestone: mozilla0.9.1 → mozilla0.9.2
Adding [@ nsDocShell::SetFocus] to summary for talkback tracking
Summary: clicking on link in three-pane crashes in docshell → clicking on link in three-pane crashes in docshell [@ nsDocShell::SetFocus]
This wasn't quite the right fix, but danm came up with the right one in a different bug, and it's checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsDocShell::SetFocus]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: