Bug 82073. Wallpaper over the crash until bryner can look at this.